main/default/objects/Assignment_Matrix_Rule__c/Assignment_Matrix_Rule__c.object-meta.xml
<CustomObject>
    <label>Assignment Matrix Rule</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Assignment Matrix Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Matrix Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>