main/default/objects/Assignment_Matrix_Rule__c/fields/Assignment_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Matrix__c</fullName>
    <label>Assignment Matrix</label>
    <referenceTo>Assignment_Matrix__c</referenceTo>
    <relationshipLabel>Assignment Matrix Rules</relationshipLabel>
    <relationshipName>Assignment_Matrix_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>