main/default/objects/Assignment_Matrix_Rule__c/fields/Includes_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Includes_Group_Number__c</fullName>
    <label>Includes Group Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>