main/default/objects/Assignment_Matrix_Rule__c/fields/Is_NOT__c.field-meta.xml
<CustomField>
    <fullName>Is_NOT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns inverse of rule evaluated value</description>
    <label>Is NOT</label>
    <type>Checkbox</type>
</CustomField>