main/default/objects/Assignment_Matrix_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Field_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <default>true</default>
                <label>equals</label>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>less than equals</fullName>
            </value>
            <value>
                <fullName>greater than equals</fullName>
            </value>
            <value>
                <fullName>is null</fullName>
            </value>
            <value>
                <fullName>not null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>