main/default/objects/Assignment_Matrix_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <inlineHelpText>For rule type Key Value Query which is used to apply rules to 2 fields in just one rule:
1. Field API Name must include 2 fields separated by semi-colon.
2. The first of these 2 fields must be of type &apos;Text&apos;.
3. The selected operator and field type applies to only second field.
4. The first field will use equals operator and the second field will use the operator selected.</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Query</fullName>
            </value>
            <value>
                <fullName>Key Value Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>