main/default/objects/Assignment_Matrix_Rule__c/validationRules/Boolean_Operator_Accepted_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Boolean_Operator_Accepted_Values</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Field_Type__c, &apos;Boolean&apos;) &amp;&amp; (LOWER(Value__c) &lt;&gt;  &apos;true&apos;)  &amp;&amp;  (LOWER(Value__c) &lt;&gt;  &apos;false&apos;)</errorConditionFormula>
    <errorMessage>Value must be either &apos;true&apos; or &apos;false&apos;</errorMessage>
</ValidationRule>