main/default/objects/Assignment_Matrix_Rule__c/validationRules/Value_Field_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_Field_Null_Check</fullName>
    <active>true</active>
    <description>Value must be null for null check operator</description>
    <errorConditionFormula>(ISPICKVAL(Operator__c, &apos;Is Null&apos;) || ISPICKVAL(Operator__c, &apos;Not Null&apos;)) 
&amp;&amp; NOT(ISBLANK(Value__c))</errorConditionFormula>
    <errorMessage>Value field must be blank for Null check</errorMessage>
</ValidationRule>